# lenabeauty-

./: .env.example  DESKTOP_SETUP_GUIDE.md  FEATURE_ROADMAP.md  IMPROVEMENTS_SUMMARY.md  INVOICE_PRINTING_GUIDE.md  LANGUAGE_LOCALIZATION_REPORT.md  MASTER_PLAN.md  PREMIUM_FEATURES.md  README.md  SALES_READY_RELEASE.md  UX_UI_AUDIT_REPORT.md  VERSION_SOURCE_OF_TRUTH.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vercel.json  vite.config.ts
.vercel/: project.json
docs/: APP_BACKGROUND.md  CERTIFICATION.md  COMPETITIVE_ANALYSIS_2026.md  CRITICAL_FIXES_PLAN.md  CURRENT_APP_AUDIT.md  CURRENT_VERSION_CLOSURE.md  DB_AUDIT_REPORT.md  DECISIONS.md  DEMO_OPERATOR_GUIDE.md  FINAL_MASTER_PLAN.md  FULL_AUDIT_2026-06-28.md  MANUAL_PRE_SALE_ACCEPTANCE_CHECKLIST.md  MEMBERSHIP_BOOTSTRAP.md  NEXT_VERSION_PLAN.md  PHASE_10A.6_PREVIEW_SOURCE_REMOVAL_CERTIFICATION.md  PHASE_2.11.2E_DML1_PRINT_AND_PRE_SALE_CERTIFICATION.md  PHASE_2.11.2E_R_PLUS_MULTI_TRACK_PRE_SALE_CERTIFICATION.md  PHASE_5B_CHECKOUT_SQL_DRAFT.md  PRODUCTION_READINESS.md  README.md  RLS_HARDENING_REPORT.md  ROADMAP.md  ROADMAP_STATUS.md  SALES_READY_RELEASE.md  SUPABASE_FRONTEND_ACTIVATION_CHECKLIST.md  SUPABASE_PHASE_10B_CHECKOUT_ACTIVATION.sql  SUPABASE_SETUP_CHECKOUT.md  TAURI_DESKTOP_FOUNDATION.md  TAURI_V2.0_SQLITE_SCHEMA.sql  VERCEL_SUPABASE_SETUP.md
public/: manifest.json
scripts/: supabase-live-preflight.mjs  verify-rls-isolation.ts
src/: App.tsx  auth.tsx  i18n.ts  main.tsx  routes.tsx  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+122 files in other folders)
